--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "reactapp",
   "version": "1.0.0",
+  "proxy": "http://localhost:5000",
   "description": "nmo backend",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "nmo": "npm run start --prefix nmo",
+    "server": "nodemon index.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run nmo\"",
+    "start": "node index.js"
   },
   "author": "om",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.5.0",
     "mongoose": "^5.9.15"
   },
   "devDependencies": {
